2004-09-29  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* NEWS: Add new entry for 2.13.1

2004-09-28  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* configure.in: Change version to 2.13.1

2004-09-27  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* utils/support.c (vsnprintf): ensure snpritnf() to return a
	  \0-terminated string

	* interface/mac_c.c, interface/server_c.c, interface/w32g_c.c,
	  interface/w32g_i.c, interface/wrdt_dumb.c, interface/wrdt_mac.c,
	  interface/wrdt_tty.c, interface/wrdt_w32g.c, interface/xaw_i.c,
	  interface/xskin_i.c, libarc/arc.c, timidity/audriv_al.c,
	  timidity/audriv_mme.c, timidity/common.c, timidity/mac_qt_a.c,
	  timidity/sun_a.c, timidity/timidity.c, timidity/wrdt_read.c:
	  Fix to use strn* functinos.

2004-09-23  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* utils/support.h: ditto
	* utils/support.c: ditto
	* configure.in: add strlcpy and strlcat

2004-09-15  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/resample.c: Reimplement bounds cheking

2004-09-09  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* interface/gtk_c.c (ctl_total_time): ditto.
	* interface/gtk_i.c (handle_input): Fix counter overflow
	  (fix for [timidity-bugs-en:00032])
	* NEWS: Fix typo.

2004-09-07  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* freq.c: mostly rewritten
	  New pitch and chord detection algorithm that is much more
	  robust and accurate than before.
	* sndfont.c (main): CFG_FOR_SF_SUPPORT_FFT related code
	  modified to work with new freq.c

2004-09-03  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* timidity/timidity.c: add null_play_mode
	  (fix for [timidity-bugs-en:00031])
	* timidity/timidity.c (parse_opt_h): add prototype for
	  show_ao_device_info()
	* timidity/readmidi.c (check_midi_file): Fix to recognize .rmi & .mfi
	  (Fix for [timidity-bugs-en:00030])

2004-09-01  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* timidity/timidity.c : Fix for linkage error in W32
	* utils/support.h (S_ISDIR): define S_ISDIR for platforms without
	  S_ISDIR